--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p> welcome narendra </p><br>
-<p>14003301</p><br>
-<p>K L University</p><br>
+<p> welcome narendra </p>
+<p>14003301</p>
+<p>K L University</p>
 <p>C S E</p>
